# cmake-templates

./: README.md
HierarchyPattern/: CMakeLists.txt
HierarchyPattern/lib/UtilLib/: CMakeLists.txt
HierarchyPattern/lib/UtilLib/include/UtilLib/string_utils/: string_util.h
HierarchyPattern/lib/UtilLib/src/string_utils/: string_util.cpp
HierarchyPattern/src/: main.cpp
ROS2/: README.md
ROS2/MyCustomLibrary/db/: .clang-format  CMakeLists.txt  package.xml
ROS2/MyCustomLibrary/db/include/db/model/: Document.h  Student.hpp  SubDocument.h
ROS2/MyCustomLibrary/db/include/db/resource/: MongoManager.hpp
ROS2/MyCustomLibrary/db/src/db/model/: Student.cpp
ROS2/MyCustomLibrary/executer/: CMakeLists.txt  package.xml
ROS2/MyCustomLibrary/executer/src/: main.cpp
